src/app/components/card/card.component.css
@media screen and (max-width: 767px) {
  .card {
    min-width: 100%;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 3vw;
    border-radius: 10px;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }
  .subcard {
    max-width: 100%;
    background-color: #f1f2f5;
    color: black;
    box-sizing: border-box;
    padding: 2vw;
    border-radius: 10px;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }
  .thin-card {
    min-width: 100%;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 1vw;
    border-radius: 10px;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1279px) {
  .card {
    min-width: 100%;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 2vw;
    border-radius: 10px;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }
  .subcard {
    max-width: 100%;
    background-color: #f1f2f5;
    color: black;
    box-sizing: border-box;
    padding: 2%;
    border-radius: 10px;
    margin-top: 1vw;
    margin-bottom: 2vw;
  }
  .thin-card {
    min-width: 100%;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 1vw;
    border-radius: 10px;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }
}

@media screen and (min-width: 1280px) {
  .card {
    min-width: 40vw;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 1.3vw;
    border-radius: 10px;
    margin-top: 1vw;
    margin-bottom: 1vw;
  }
  .subcard {
    max-width: 100%;
    background-color: #f1f2f5;
    color: black;
    box-sizing: border-box;
    padding: 1vw;
    border-radius: 10px;
    margin-top: 0.2vw;
    margin-bottom: 0.7vw;
  }
  .thin-card {
    min-width: 100%;
    background-color: #ffffff;
    color: black;
    box-sizing: border-box;
    padding: 0.5vw;
    border-radius: 10px;
    margin-top: 1vw;
    margin-bottom: 1vw;
  }
}

